[gd_scene load_steps=19 format=3 uid="uid://dqu4ynl3lwx2t"]

[ext_resource type="Script" uid="uid://emldon8urap5" path="res://Scripts/Enemy Scripts/BossBehaviour.gd" id="1_1bxol"]
[ext_resource type="PackedScene" uid="uid://bmsjgf12oovyy" path="res://Models/Enemies/Boss/Boss.blend" id="3_4onus"]
[ext_resource type="Texture2D" uid="uid://cbu02u0njv72o" path="res://Assets/Kenney Particles Transparent Background/smoke_07.png" id="4_2ws8c"]

[sub_resource type="SphereShape3D" id="SphereShape3D_dp8bq"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_k711p"]
radius = 1.08206
height = 2.16412

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_gorya"]
radius = 1.08206
height = 2.16412

[sub_resource type="BoxShape3D" id="BoxShape3D_a0bld"]
size = Vector3(4.72223, 3.10356, 3.29971)

[sub_resource type="SphereShape3D" id="SphereShape3D_1bxol"]
radius = 4.85375

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fopvl"]
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("4_2ws8c")
billboard_mode = 1
billboard_keep_scale = true

[sub_resource type="Curve" id="Curve_nv5gi"]
_data = [Vector2(0.534351, 0.438202), 0.0, 0.0, 0, 0]
point_count = 1

[sub_resource type="CurveTexture" id="CurveTexture_jmuxb"]
curve = SubResource("Curve_nv5gi")

[sub_resource type="Curve" id="Curve_8s7lv"]
_data = [Vector2(0.0076336, 0.449438), 0.0, 0.0, 0, 0, Vector2(0.450382, 1), 0.0, 0.0, 0, 0, Vector2(0.99999, 0.539326), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_k6aqa"]
curve = SubResource("Curve_8s7lv")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ti2x5"]
emission_shape = 2
emission_sphere_radius = 4.0
angle_min = -92.9
angle_max = 45.7
gravity = Vector3(0, 0, 0)
scale_min = 5.0
scale_max = 6.0
scale_curve = SubResource("CurveTexture_k6aqa")
color = Color(0.730783, 0.163364, 0.999999, 1)
alpha_curve = SubResource("CurveTexture_jmuxb")
hue_variation_min = -0.1
hue_variation_max = 0.1

[sub_resource type="QuadMesh" id="QuadMesh_3twt1"]

[sub_resource type="BoxShape3D" id="BoxShape3D_gorya"]
size = Vector3(5.19403, 0.431641, 5.33246)

[sub_resource type="BoxShape3D" id="BoxShape3D_tbb04"]
size = Vector3(5.42419, 4.8479, 0.644318)

[sub_resource type="BoxShape3D" id="BoxShape3D_gbk7o"]
size = Vector3(6.74976, 0.274902, 2.22347)

[node name="BossEnemy" type="CharacterBody3D" groups=["Enemy", "enemy"]]
script = ExtResource("1_1bxol")

[node name="DetectionArea" type="Area3D" parent="." groups=["Enemy"]]
transform = Transform3D(50, 0, 0, 0, 50, 0, 0, 0, 50, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionArea" groups=["Enemy"]]
shape = SubResource("SphereShape3D_dp8bq")
debug_color = Color(0.138961, 0.599429, 0.670183, 1)

[node name="MiniEnemySpawnPoint" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.544362, 0.573799, 0)

[node name="Collision" type="CollisionShape3D" parent="." groups=["enemy"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.279818, -0.162291, 0)
shape = SubResource("CapsuleShape3D_k711p")

[node name="Collision2" type="CollisionShape3D" parent="." groups=["enemy"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.279818, 1.44008, 0)
shape = SubResource("CapsuleShape3D_k711p")

[node name="ChargeCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.86986, 0.250936, 0.00324762)
visible = false
shape = SubResource("CapsuleShape3D_gorya")
disabled = true

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="ChargeAttackArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.14378, -0.150951, -0.0858476)
visible = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="ChargeAttackArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.42941, 1.73942, 0.0785065)
shape = SubResource("BoxShape3D_a0bld")

[node name="SporeSpawnPoints" type="Node3D" parent="."]

[node name="Node3D" type="Node3D" parent="SporeSpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.93757, 2.08735, 0.522021)

[node name="Node3D2" type="Node3D" parent="SporeSpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.65561, 2.36815, 0.884214)

[node name="Node3D3" type="Node3D" parent="SporeSpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.18235, 3.06044, -0.509569)

[node name="Node3D4" type="Node3D" parent="SporeSpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.05311, 2.67174, 1.4505)

[node name="Node3D5" type="Node3D" parent="SporeSpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.07846, 2.89913, -1.39102)

[node name="Node3D6" type="Node3D" parent="SporeSpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.66663, 3.47142, 0.129515)

[node name="Node3D7" type="Node3D" parent="SporeSpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.70214, 0.564325, 0.00163567)

[node name="SporeDamageArea" type="Area3D" parent="."]
visible = false

[node name="SporeCollisionShape" type="CollisionShape3D" parent="SporeDamageArea"]
shape = SubResource("SphereShape3D_1bxol")

[node name="AreaDamageParticles" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0154005, 0.0270147, 0.0169544)
material_override = SubResource("StandardMaterial3D_fopvl")
emitting = false
amount = 50
lifetime = 2.0
process_material = SubResource("ParticleProcessMaterial_ti2x5")
draw_pass_1 = SubResource("QuadMesh_3twt1")

[node name="ExplosionEnemySpawnPoint" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.24533, 1.48503, 0)

[node name="DamageNumbersPosition" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.57163, 3.40632, 0)

[node name="Mesh" parent="." instance=ExtResource("3_4onus")]
transform = Transform3D(-3.93403e-08, 0, 0.9, 0, 0.9, 0, -0.9, 0, -3.93403e-08, 0, -1.20249, 0)

[node name="Skeleton3D" parent="Mesh/Armature" index="0"]
bones/0/position = Vector3(-1.56894e-17, 0.583797, 0.00588823)
bones/0/rotation = Quaternion(0.262759, 9.94853e-10, 0.0366566, 0.964165)
bones/1/rotation = Quaternion(0.391542, 1.10966e-07, 3.36223e-08, 0.92016)
bones/2/rotation = Quaternion(-0.208901, -1.19031e-10, -4.95214e-08, 0.977937)
bones/3/position = Vector3(0.944021, 0.25059, -0.108592)
bones/3/rotation = Quaternion(-0.082851, 0.169213, 0.892595, -0.409605)
bones/4/rotation = Quaternion(0.548747, -0.181656, -0.0329075, 0.81535)
bones/5/rotation = Quaternion(0.181306, -0.243215, -0.0316599, 0.952351)
bones/6/rotation = Quaternion(0.122588, -0.00178744, -0.0781887, 0.989371)
bones/7/rotation = Quaternion(0.0901468, 6.2362e-05, -0.105388, 0.990337)
bones/9/rotation = Quaternion(0.00887712, 0.000598729, -0.136631, 0.990582)
bones/10/position = Vector3(-0.944022, 0.25059, -0.108593)
bones/10/rotation = Quaternion(0.192076, -0.0307033, 0.901779, 0.385951)
bones/11/rotation = Quaternion(0.543859, 0.428022, 0.0155429, 0.721646)
bones/12/rotation = Quaternion(0.498759, 0.199751, -0.160342, 0.828028)
bones/13/position = Vector3(0.559574, 0.228499, 0.0635879)
bones/13/rotation = Quaternion(0.0317051, 0.276606, 0.952462, -0.123694)
bones/13/scale = Vector3(0.999998, 1, 0.999984)
bones/14/rotation = Quaternion(-0.56703, 0.000147337, -0.155459, 0.808894)
bones/14/scale = Vector3(1, 1.00001, 0.999995)
bones/15/position = Vector3(-0.559575, 0.228499, 0.0635879)
bones/15/rotation = Quaternion(-0.0218814, 0.612101, 0.776995, 0.145367)
bones/16/rotation = Quaternion(-0.584488, -0.00014489, 0.160245, 0.795421)
bones/17/position = Vector3(-0.57865, 0.0789853, 0.147642)
bones/17/rotation = Quaternion(0.000297515, 0.684088, 0.7294, 0.000279033)
bones/18/rotation = Quaternion(0.225693, 8.23093e-11, -0.000184116, 0.974198)
bones/19/position = Vector3(0.578648, 0.32216, -0.249341)
bones/19/rotation = Quaternion(-0.000306091, 0.660956, 0.750424, -0.000269598)
bones/20/rotation = Quaternion(0.254691, -6.48015e-11, 0.000207772, 0.967023)
bones/21/position = Vector3(0.578651, 0.322174, -0.249314)
bones/21/rotation = Quaternion(0.000261053, 0.768368, -0.640008, -0.00031341)
bones/22/position = Vector3(0.578651, 0.62029, 0.452005)
bones/23/position = Vector3(-0.578651, 0.0790031, 0.14765)
bones/23/rotation = Quaternion(-0.000261053, 0.768368, -0.640008, 0.00031341)
bones/24/position = Vector3(-0.578651, 0.581623, 0.452005)

[node name="SpearCombo 1" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="SpearCombo 1"]
transform = Transform3D(1, 0, 0, 0, 0.939693, 0.34202, 0, -0.34202, 0.939693, 2.89738, 0.597617, 0.327634)
shape = SubResource("BoxShape3D_gorya")

[node name="SpearCombo 2" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="SpearCombo 2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.24895, 1.36381, 0.608616)
shape = SubResource("BoxShape3D_tbb04")

[node name="SpearCombo 3" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0272579, 0.0875964, 0.085588)

[node name="CollisionShape3D2" type="CollisionShape3D" parent="SpearCombo 3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.03318, 0.573887, 0.68315)
shape = SubResource("BoxShape3D_gbk7o")

[connection signal="area_entered" from="DetectionArea" to="." method="_on_detection_area_entered"]
[connection signal="area_exited" from="DetectionArea" to="." method="_on_detection_area_exited"]
[connection signal="area_entered" from="ChargeAttackArea" to="." method="_on_charge_attack_area_entered"]
[connection signal="body_entered" from="ChargeAttackArea" to="." method="_on_charge_attack_body_entered"]
[connection signal="area_entered" from="SporeDamageArea" to="." method="_on_spore_damage_area_entered"]
[connection signal="area_exited" from="SporeDamageArea" to="." method="_on_spore_damage_area_exited"]
[connection signal="area_entered" from="SpearCombo 1" to="." method="_on_spear_combo_1_entered"]
[connection signal="area_exited" from="SpearCombo 1" to="." method="_on_spear_combo_1_exited"]
[connection signal="area_entered" from="SpearCombo 2" to="." method="_on_spear_combo_2_entered"]
[connection signal="area_exited" from="SpearCombo 2" to="." method="_on_spear_combo_2_exited"]
[connection signal="area_entered" from="SpearCombo 3" to="." method="_on_spear_combo_3_entered"]
[connection signal="area_exited" from="SpearCombo 3" to="." method="_on_spear_combo_3_exited"]

[editable path="Mesh"]
